removing center alignment of viewport, causes dragability issues

--- a/js/index.less
+++ b/js/index.less
@@ -203,7 +203,6 @@ pre[class*='language-'] {
   top: 90px;
   overflow-y: hidden;
   overflow-x: auto;
-  text-align: center;
 
   body[data-iframed] & {
       top: 20px;
